src/App.css
.header-color {
  background: #833ab4;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.landing-grid {
  background: #833ab4;  /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  text-align: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.projects-grid {
  display: flex;
}

/* Resume Page css */
.resume-right-col {
  background: #27221F;
  color: white;
  padding: 2em;
}

/* contact page css */

.contact-body {
  margin: auto;
  width: 100%;
  height: 100%;
  justify-content: center;
  padding-top: 2em;
}

.contact-grid {
  text-align: center;
  justify-content: center;
  width: 80%;
  height: 550px;
  background: white;
  color: black;
  margin-bottom: 20px;
}

.contact-grid h2 {
  font-family: 'Anton', sans-serif;
}

.contact-grid p {
  font-family: 'Oxygen', sans-serif;
  font-weight: bold;
}

.contact-grid hr {
  border-top: 5px dotted black;
  width: 50%;
  margin: auto;
}

.contact-list i {
  font-size: 55px;
  padding-right: 3rem;
}


/* contact page css */

.avatar-img {
  height: 175px;
}

.banner-text {
  background-color: black;
  opacity: .8;
  width: 75%;
  margin: auto;
  border-radius: 10px;
}

.banner-text h1 {
  font-size: 50px;
  font-weight: bold;
  color: white;
}

.banner-text hr {
  border-top: 5px dotted white;
  width: 50%;
  margin: auto;
}

.banner-text p {
  color: white;
  font-size: 20px;
  padding: 1em;
}

.social-links {
  display: flex;
  justify-content: space-between;
  width: 75%;
  margin: auto;
  font-size: 50%
}

.social-links i {
  color: white;
  font-size: 10em;
  padding: 8px;
}

.contact-item {
  font-size: 30px;
}

.contact-item2 {
  font-size: 20px;
}

/* Desktop/Large */
@media only screen and (min-width: 992px) {
  .social-links i {
    font-size: 10em;
  }
}

/* XS Device */
@media only screen and (max-width: 600px) {
  .social-links i {
    font-size: 5em;
  }

  .banner-text h1 {
    font-size: 25px;
    font-weight: bold;
    color: white;
    padding-top: 1em;
  }
  .avatar-img {
    height: 125px;
  }

  .contact-grid {
    width: 95%;
  }

  .contact-item {
    font-size: 20px;
  }

  .contact-list i {
    font-size: 40px;
    padding-right: 1rem;
  }

  .projects-grid {
    display: inline;
  }
}

